--- a/week_3_machinelearning.ipynb
+++ b/week_3_machinelearning.ipynb
@@ -21,9 +21,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywb8NifF9XN3",
-        "outputId": "94623ff3-05be-467a-8e7d-813f5d06d2d2"
+        "outputId": "bc296220-11f7-4345-8896-8765a9a1a836"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "b2IL0uT19_3A"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "pycharm": {
           "name": "#%%\n"
@@ -589,7 +589,7 @@
       "metadata": {
         "id": "-8nlJCESEn56"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1099,7 +1099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 6,
       "metadata": {
         "id": "_IUm1DLwL9hW"
       },
@@ -1173,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "_BCAYVEUL9hW"
       },
@@ -1210,10 +1210,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "mlRuHQkKL9hX",
-        "outputId": "f5cdce3a-82e2-4ce4-a0a9-f28aa1f8e96e",
+        "outputId": "ffc37120-536b-4df7-d1ec-6c12f8ff38ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1223,7 +1223,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1mUnscaled:\n",
+            "\u001b[1mRAVDESS Unscaled:\n",
             "\u001b[0m\n",
             "12 Chromagram features:           min = 0.310,     max = 1.000,     mean = 0.667,     deviation = 0.088\n",
             "\n",
@@ -1241,7 +1241,7 @@
             "40 MFCC features:                 min = -449.006,    max = 144.306,    mean = -3.902,    deviation = 67.441\n",
             "\n",
             "\n",
-            "\u001b[1mStandard Scaling:\n",
+            "\u001b[1mRAVDESS Standard Scaling:\n",
             "\u001b[0m\n",
             "12 Chromagram features:           min = -3.896,     max = 4.368,     mean = -0.000,     deviation = 1.000\n",
             "\n",
@@ -1259,7 +1259,7 @@
             "40 MFCC features:                 min = -2.337,    max = 2.532,    mean = 0.000,    deviation = 1.002\n",
             "\n",
             "\n",
-            "\u001b[1mMinMax Scaling:\n",
+            "\u001b[1mRAVDESS MinMax Scaling:\n",
             "\u001b[0m\n",
             "12 Chromagram features:           min = 0.000,     max = 1.000,     mean = 0.478,     deviation = 0.145\n",
             "\n",
@@ -1279,13 +1279,13 @@
         }
       ],
       "source": [
-        "print('\\033[1m'+ 'Unscaled:\\n'+'\\033[0m')\n",
+        "print('\\033[1m'+ 'RAVDESS Unscaled:\\n'+'\\033[0m')\n",
         "print_features(features_df)\n",
         "\n",
         "print('\\n\\n\\033[1m'+ 'MY FEATURES Unscaled:\\n'+'\\033[0m')\n",
         "print_features(myFeatures_df)\n",
         "\n",
-        "print('\\n\\n\\033[1m'+'Standard Scaling:\\n'+'\\033[0m')\n",
+        "print('\\n\\n\\033[1m'+'RAVDESS Standard Scaling:\\n'+'\\033[0m')\n",
         "features_scaled_df = pd.DataFrame(features_scaled)\n",
         "print_features(features_scaled_df)\n",
         "\n",
@@ -1293,7 +1293,7 @@
         "myFeatures_scaled_df = pd.DataFrame(myFeatures_scaled)\n",
         "print_features(myFeatures_scaled_df)\n",
         "\n",
-        "print('\\n\\n\\033[1m'+'MinMax Scaling:\\n'+'\\033[0m')\n",
+        "print('\\n\\n\\033[1m'+'RAVDESS MinMax Scaling:\\n'+'\\033[0m')\n",
         "features_minmax_df = pd.DataFrame(features_minmax)\n",
         "print_features(features_minmax_df)\n",
         "\n",
